syntax = "proto3";

option go_package = "github.com/hyle-team/bridgeless-signer/pkg/types";
import "google/api/annotations.proto";
import "deposit.proto";
import "transaction.proto";

message WithdrawalRequest {
  Deposit deposit = 1;
}

enum WithdrawalStatus {
  PROCESSING = 0;
  INVALID = 1;
  FAILED = 2;
  TX_PENDING = 4;
  TX_FAILED = 5;
  TX_SUCCESSFUL = 6;
}

message CheckWithdrawalRequest {
  string origin_tx_id = 1;
}

message CheckWithdrawalResponse {
  WithdrawalStatus status = 1;
  optional Transaction result_transaction = 2;
}

message Empty {}

service Service {
  rpc SubmitWithdrawal(WithdrawalRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/submit"
      body: "*"
    };
  }

  rpc CheckWithdrawal(CheckWithdrawalRequest) returns (CheckWithdrawalResponse) {
    option (google.api.http) = {
      get: "/check/{origin_tx_id}"
    };
  }
}